--- a/templates/users.html
+++ b/templates/users.html
@@ -42,7 +42,7 @@
 
 
         <!-- ADD BOOKS AND REVIEW ROUTE  -->
-        <form action="/addPage" method="post" class="form-inline justify-content-end">
+        <form action="/addPage" method="get" class="form-inline justify-content-end">
             <button class="btn" type="submit" style="color: white;">Add Book and Review</button>
         </form>
 
