--- a/templates/users.html
+++ b/templates/users.html
@@ -18,11 +18,12 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </head>
 
-<body>
+<body style="background-color: #ced;">
+
 
 
     <!-- ================= NAV ======================== -->
-    <nav id="navbar" class="navbar navbar-dark" style="background-color:#f51;">
+    <nav id="navbar" class="navbar navbar-dark" style="background-color: #aa9;">
         <span class="navbar-text justify-content-left" style="color: white;">
             <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-person-circle" fill="currentColor"
                 xmlns="http://www.w3.org/2000/svg">
@@ -55,6 +56,9 @@
     </nav>
 
     <!-- =================================================================================================== -->
+    <div style="height: 30px; background-color:white; margin-bottom: 30px;">
+
+    </div>
 
     <div class="container">
         <div class="row">
