--- a/templates/books.html
+++ b/templates/books.html
@@ -17,8 +17,6 @@
 
 <body style="background-color: #ced;">
 
-
-
     <!-- ================= NAV ======================== -->
     <nav id="navbar" class="navbar navbar-dark" style="background-color:#aa9;">
         <span class="navbar-text justify-content-left" style="color: white;">
@@ -39,10 +37,8 @@
 
         <!-- =================== LOGOUT ROUTE ===================== -->
         <form action="/logout" method="post" class="form-inline justify-content-end">
-
             <button class="btn" type="submit" style="color: white;">log out</button>
         </form>
-
     </nav>
 
     <!-- =================================================================================================== -->
@@ -64,35 +60,22 @@
                         <div class="card">
                             <div class="card-header">
 
-                    
-
+                                <!-- book title as link -->
                                 <a href="/get_book_review/{{ review.book_id }}">
-
                                     <h4>{{ review.title|capitalize }}</h4>
-
                                 </a>
-
                             </div>
 
                             <div class="card-body">
 
                                 <!-- rating -->
-                                <p>
-                                    Rating: {{ review.rating }}
-                                </p>
+                                <p>Rating: {{ review.rating }}</p>
 
-                           
-                                <a href="/getUser/{{ review.user_id }}">
+                                <!-- user alias as a link  -->
+                                <a href="/getUser/{{ review.user_id }}">{{ review.alias|upper }}</a>
 
-
-
-                                    {{ review.alias|upper }}
-
-
-                                </a>
+                                <!-- review content -->
                                 {{ review.content }}
-
-
                                 <div class="card-footer text-muted">
 
                                     <!-- comment's timestamp  -->
@@ -106,10 +89,6 @@
                 {% endfor %}
             </div>
 
-
-
-
-
             <!-- ------------------ Right column -------------------- -->
             <div class="col" style="text-align: center;">
                 <h3 style="margin-top: 50px; margin-bottom: 30px;">Other Books with Reviews:</h3>
@@ -119,41 +98,28 @@
 
                         <div scrolling="yes">
 
-
                             <!-- LOOP FOR ALL BOOKS IN DATABASE  -->
                             {% for book in book_results %}
+                            <div class="row">
+                                <div class="col">
 
-                            <!-- form used for book title link -->
-                            <form action="/get_book_review" method="post">
-                                <input type="hidden" name="book_id" value="{{ book.id }}">
+                                    <a href="/get_book_review/{{ book.id }}">
 
-                                <!-- book title: link to book's page -->
-                                <button type="submit" class="btn btn-link">
-                                    {{ book.title }}
-                                </button>
-
-                            </form>
-
+                                        {{ book.title }}
+                                    </a>
+                                </div>
+                            </div>
                             {% endfor %}
-                        </div>
 
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
 
-
-
-
-
-
-
-
-
     <!-- BOOTSTRAP'S: Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
         integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
         crossorigin="anonymous"></script>
